// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`askNotificationPermissions onNotification should deep link to ME user's contact screen 1`] = `
Array [
  Object {
    "type": "navigated to person screen",
  },
  Object {
    "type": "app/REQUEST_NOTIFICATIONS",
  },
]
`;

exports[`askNotificationPermissions onNotification should deep link to add contact screen 1`] = `
Array [
  Object {
    "params": Object {
      "onComplete": [Function],
      "organization": Object {
        "id": "2",
      },
    },
    "routeName": "nav/ADD_CONTACT",
    "type": "Navigation/PUSH",
  },
  Object {
    "type": "app/REQUEST_NOTIFICATIONS",
  },
  Object {
    "actions": Array [
      Object {
        "params": Object {},
        "routeName": "nav/MAIN_TABS",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": null,
    "type": "Navigation/RESET",
  },
]
`;

exports[`askNotificationPermissions onNotification should deep link to contact screen 1`] = `
Array [
  Object {
    "person": Object {
      "id": "1",
      "type": "person",
    },
    "type": "app/LOAD_PERSON_DETAILS",
  },
  Object {
    "type": "app/REQUEST_NOTIFICATIONS",
  },
  Object {
    "type": "navigated to person screen",
  },
]
`;

exports[`askNotificationPermissions onNotification should deep link to contact screen on iOS 1`] = `
Array [
  Object {
    "person": Object {
      "id": "1",
      "type": "person",
    },
    "type": "app/LOAD_PERSON_DETAILS",
  },
  Object {
    "type": "app/REQUEST_NOTIFICATIONS",
  },
  Object {
    "type": "navigated to person screen",
  },
]
`;

exports[`askNotificationPermissions onNotification should deep link to home screen 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "params": Object {},
        "routeName": "nav/MAIN_TABS",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": null,
    "type": "Navigation/RESET",
  },
  Object {
    "type": "app/REQUEST_NOTIFICATIONS",
  },
]
`;

exports[`askNotificationPermissions onNotification should deep link to main steps tab screen 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "params": Object {},
        "routeName": "nav/MAIN_TABS",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": null,
    "type": "Navigation/RESET",
  },
  Object {
    "type": "app/REQUEST_NOTIFICATIONS",
  },
]
`;

exports[`askNotificationPermissions onNotification userInteraction = false on Android, should do nothing 1`] = `
Array [
  Object {
    "type": "app/REQUEST_NOTIFICATIONS",
  },
]
`;

exports[`askNotificationPermissions onNotification userInteraction = false on iOS, should call iOS finish 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "params": Object {},
        "routeName": "nav/MAIN_TABS",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": null,
    "type": "Navigation/RESET",
  },
  Object {
    "type": "app/REQUEST_NOTIFICATIONS",
  },
]
`;

exports[`askNotificationPermissions onRegister should update notification token for android devices 1`] = `
Array [
  Array [
    Object {
      "FETCH": "SET_PUSH_TOKEN_FETCH",
      "SUCCESS": "SET_PUSH_TOKEN_SUCCESS",
      "endpoint": "undefined/apis/v4/push_notification_device_tokens",
      "method": "post",
      "name": "SET_PUSH_TOKEN",
    },
    Object {
      "include": "",
    },
    Object {
      "data": Object {
        "attributes": Object {
          "platform": "GCM",
          "token": "New Token",
        },
        "type": "push_notification_device_token",
      },
    },
  ],
]
`;

exports[`askNotificationPermissions onRegister should update notification token for android devices 2`] = `
Array [
  Object {
    "type": "SET_PUSH_TOKEN_SUCCESS",
  },
  Object {
    "type": "app/REQUEST_NOTIFICATIONS",
  },
]
`;

exports[`askNotificationPermissions onRegister should update notification token for iOS devices 1`] = `
Array [
  Array [
    Object {
      "FETCH": "SET_PUSH_TOKEN_FETCH",
      "SUCCESS": "SET_PUSH_TOKEN_SUCCESS",
      "endpoint": "undefined/apis/v4/push_notification_device_tokens",
      "method": "post",
      "name": "SET_PUSH_TOKEN",
    },
    Object {
      "include": "",
    },
    Object {
      "data": Object {
        "attributes": Object {
          "platform": "APNS",
          "token": "New Token",
        },
        "type": "push_notification_device_token",
      },
    },
  ],
]
`;

exports[`askNotificationPermissions onRegister should update notification token for iOS devices 2`] = `
Array [
  Object {
    "type": "SET_PUSH_TOKEN_SUCCESS",
  },
  Object {
    "type": "app/REQUEST_NOTIFICATIONS",
  },
]
`;

exports[`showNotificationPrompt User accepts notifications not isAndroid no token in Redux existing device permissions not enabled user has not seen native notifications modal before should show Notification Primer screen 1`] = `
Array [
  Object {
    "type": "navigate back",
  },
  Object {
    "type": "nagivate push",
  },
]
`;

exports[`showNotificationPrompt User denies notifications not isAndroid no token in Redux existing device permissions not enabled user has not seen native notifications modal before should show Notification Primer screen 1`] = `
Array [
  Object {
    "type": "navigate back",
  },
  Object {
    "type": "nagivate push",
  },
]
`;

exports[`showNotificationPrompt should show Notification Off screen 1`] = `
Array [
  Object {
    "type": "navigate back",
  },
  Object {
    "type": "nagivate push",
  },
]
`;

exports[`showNotificationPrompt should show Notification Primer screen 1`] = `
Array [
  Object {
    "type": "navigate back",
  },
  Object {
    "type": "nagivate push",
  },
]
`;

exports[`showReminderScreen should show Notification Primer screen 1`] = `
Array [
  Object {
    "params": Object {
      "descriptionText": "test description",
      "onComplete": [Function],
    },
    "routeName": "nav/NOTIFICATION_PRIMER",
    "type": "Navigation/PUSH",
  },
  Object {
    "immediate": undefined,
    "key": undefined,
    "type": "Navigation/BACK",
  },
]
`;
